hacky fix for image rotation text overlap based on very flaky assumptions

--- a/src/App.css
+++ b/src/App.css
@@ -261,3 +261,8 @@ div.clearfix li:active{
 .groupBox {
   border: 5px;
 }
+
+.extra-margin {
+  margin: auto;
+  margin-bottom: 10vh;
+}
